// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreBar has custom palette 1`] = `
<div
  className="score-bar vertical"
>
  <div
    className="score-bar-bar"
    key="0"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="1"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="2"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="3"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="4"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="5"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar"
    key="6"
    style={
      Object {
        "backgroundColor": "purple",
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-0"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar med"
    key="0"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar med"
    key="1"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar med"
    key="2"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-0"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-1"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders vertically 1`] = `
<div
  className="score-bar vertical"
>
  <div
    className="score-bar-bar low-med"
    key="0"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar low-med"
    key="1"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-0"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-1"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-2"
    style={
      Object {
        "height": 2,
        "width": 60,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with < 0 score 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar empty"
    key="empty-0"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-1"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-2"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-3"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-4"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with score = 0 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar empty"
    key="empty-0"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-1"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-2"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-3"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar empty"
    key="empty-4"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;

exports[`ScoreBar renders with score > max score 1`] = `
<div
  className="score-bar horizontal"
>
  <div
    className="score-bar-bar high"
    key="0"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    key="1"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    key="2"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    key="3"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
  <div
    className="score-bar-bar high"
    key="4"
    style={
      Object {
        "height": 60,
        "width": 2,
      }
    }
  />
</div>
`;
